--- a/react-client/src/assets/index.css
+++ b/react-client/src/assets/index.css
@@ -1,3 +1,7 @@
+.App {
+  text-align: center;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
